--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/TrigoYodila/upload-file-multer-expresss-ejs/issues"
   },
-  "homepage": "https://github.com/TrigoYodila/upload-file-multer-expresss-ejs#readme"
+  "homepage": "https://github.com/TrigoYodila/upload-file-multer-expresss-ejs#readme",
+  "dependencies": {
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1"
+  }
 }
